# gridformat

./: .gitignore  .gitmodules  .mailmap  CHANGELOG.md  CITATION.cff  CMakeLists.txt  LICENSE.txt  README.md  annotated.html  annotated_dup.js  appendix_8hpp.html  appendix_8hpp__dep__incl.dot  appendix_8hpp__incl.dot  appendix_8hpp_source.html  ascii_8hpp.html  ascii_8hpp.js  ascii_8hpp__dep__incl.dot  ascii_8hpp__incl.dot  ascii_8hpp_source.html  attributes_8hpp.html  attributes_8hpp.js  attributes_8hpp__dep__incl.dot  attributes_8hpp__incl.dot  attributes_8hpp_source.html  base64_8hpp.html  base64_8hpp.js  base64_8hpp__dep__incl.dot  base64_8hpp__incl.dot  base64_8hpp_source.html  cgal_8hpp.html  cgal_8hpp.js  cgal_8hpp__incl.dot  cgal_8hpp_source.html  classGridFormat_1_1AnyReaderFactory-members.html  classGridFormat_1_1AnyReaderFactory.html  classGridFormat_1_1AsciiOutputStream-members.html  classGridFormat_1_1AsciiOutputStream.html  classGridFormat_1_1AsciiOutputStream.js  classGridFormat_1_1AsciiOutputStream__coll__graph.dot  classGridFormat_1_1AsciiOutputStream__inherit__graph.dot  (+1152 more)
benchmark/: CMakeLists.txt  check_deviations.py  common.hpp  run_all_benchmarks.py
benchmark/vtu/: CMakeLists.txt  main.cpp
docs/doxygen/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  doxygen-awesome-darkmode-toggle.js  doxygen-awesome-fragment-copy-button.js  doxygen-awesome-interactive-toc.js  doxygen-awesome-paragraph-link.js  doxygen-awesome.css  footer.html  groups.md  header.html  markdown_filter.py  markdown_math_filter.pl
examples/: CMakeLists.txt  README.md  example_triangular.cpp  example_unstructured.cpp  example_vtk_hdf.cpp  find_gridformat.cmake  triangulation.hpp
examples/analytical/: CMakeLists.txt  README.md  analytical.cpp
examples/cgal/: README.md
examples/cgal_traits/: CMakeLists.txt  cgal_traits.cpp
examples/dem/: CMakeLists.txt  README.md  dem.cpp  dem.hpp  traits.hpp
examples/dolfinx_traits/: CMakeLists.txt  README.md  dolfinx_traits.cpp
examples/dune/: README.md
examples/dune_traits/: CMakeLists.txt  dune_traits.cpp
examples/example1/: CMakeLists.txt  README.md  example1.cpp  image.hpp  traits.hpp
examples/example2/: CMakeLists.txt  README.md  dem.hpp  example2.cpp  traits.hpp
examples/example3/: CMakeLists.txt  README.md  example3.cpp
examples/example4/: CMakeLists.txt  README.md  example4.cpp
examples/example5/: CMakeLists.txt  README.md  example5.cpp
examples/example6/: CMakeLists.txt  README.md  example6.cpp  turtle.msh  turtle.msh.license
examples/example7/: CMakeLists.txt  README.md  example7.cpp
examples/mfem_traits/: CMakeLists.txt  README.md  mfem_traits.cpp
examples/minimal/: CMakeLists.txt  README.md  minimal.cpp
examples/parallel/: CMakeLists.txt  README.md  parallel.cpp
examples/voxels/: CMakeLists.txt  README.md  voxels.cpp
test/: CMakeLists.txt  detect_affected_tests.py  detect_modified_files.py  make_test_data.hpp  make_test_files.py  performance_check.py  reader_tests.hpp  run_regression_test.py  test_function.py  test_readme_cli_snippets.py  test_readme_quick_start.py  test_readme_tested_versions.py  test_vtk_file.py  testing.hpp
test/adapters/: CMakeLists.txt  simplices_2d.msh  simplices_3d.msh  test_cgal.cpp  test_dealii_parallel.cpp  test_dealii_sequential.cpp  test_dolfinx.cpp  test_dune_unstructured.cpp  test_dune_unstructured_parallel.cpp  test_dune_yasp_image_grid.cpp  test_dune_yasp_parallel_image_grid.cpp  test_dune_yasp_parallel_rectilinear_grid.cpp  test_dune_yasp_rectilinear_grid.cpp  test_mfem.cpp  test_polyline_adapter.cpp  test_reader_polylines_subdivider.cpp
test/api/: CMakeLists.txt  test_generic_converter.cpp  test_generic_parallel_time_series_writer.cpp  test_generic_parallel_writer.cpp  test_generic_reader.cpp  test_generic_time_series_writer.cpp  test_generic_writer.cpp
test/common/: CMakeLists.txt  test_accumulated_range.cpp  test_ascii_range_writer.cpp  test_buffer.cpp  test_buffer_field.cpp  test_concepts.cpp  test_counted_range.cpp  test_empty_field.cpp  test_enumerated_range.cpp  test_extended_range.cpp  test_extended_view.cpp  test_field.cpp  test_field_storage.cpp  test_field_transformations.cpp  test_filtered_range.cpp  test_flat_field.cpp  test_flat_index_mapper.cpp  test_indentation.cpp  test_iterator_facades.cpp  test_iterator_facades.hpp  test_md_index.cpp  test_md_layout.cpp  test_optional_reference.cpp  test_output_stream.cpp  test_path.cpp  test_precision.cpp  test_range_field.cpp  test_ranges.cpp  test_reserved_string.cpp  test_reserved_vector.cpp  test_scalar_field.cpp  test_serialization.cpp  test_string_conversion.cpp  test_tensor_field.cpp  test_transformed_field.cpp  test_transformed_fields.cpp  test_type_traits.cpp  test_variant.cpp  test_vector_field.cpp  test_writer.cpp
test/compression/: CMakeLists.txt  test_lz4_compression.cpp  test_lzma_compression.cpp  test_zlib_compression.cpp
test/decorators/: CMakeLists.txt  test_reader_polylines_subdivider.cpp
test/encoding/: CMakeLists.txt  test_ascii.cpp  test_base64.cpp  test_encoded_field.cpp  test_raw.cpp
test/grid/: CMakeLists.txt  structured_grid.hpp  test_converter.cpp  test_discontinuous_grid.cpp  test_filtered_grid.cpp  test_grid.cpp  test_grid_reader.cpp  test_grid_writer.cpp  test_image_grid.cpp  test_parallel_converter.cpp  test_unstructured_grid.cpp  unstructured_grid.hpp
test/parallel/: CMakeLists.txt  test_null_communicator.cpp
test/traits/: CMakeLists.txt  test_dealii_sequential.cpp  test_dune_unstructured.cpp  test_dune_yasp_image_grid.cpp  test_dune_yasp_rectilinear_grid.cpp  test_mfem.cpp
test/vtk/: CMakeLists.txt  test_measure_time.cpp  test_parallel_pvd_reader.cpp  test_parallel_pvd_writer.cpp  test_pvd_reader.cpp  test_pvd_writer.cpp  test_pvti_reader.cpp  test_pvti_writer.cpp  test_pvtp_reader.cpp  test_pvtp_writer.cpp  test_pvtr_reader.cpp  test_pvtr_writer.cpp  test_pvts_reader.cpp  test_pvts_writer.cpp  test_pvtu_reader.cpp  test_pvtu_writer.cpp  test_vti_reader.cpp  test_vti_writer.cpp  test_vtk_hdf_image_grid_reader.cpp  test_vtk_hdf_image_grid_writer.cpp  test_vtk_hdf_writer.cpp  (+17 more)
(+407 files in other folders)
